# robot2

./: .gitignore  run_slam.sh  run_teleop.sh
src/control_rbkairos/: CMakeLists.txt  package.xml  setup.py
src/control_rbkairos/config/: mecanum_controller.yaml  slam_rviz.rviz  slam_toolbox_params.yaml
src/control_rbkairos/control_rbkairos/: mecanum_move.py  move_robot.py
src/control_rbkairos/launch/: gazebo.launch.py  gazebo_manual.launch.py  mecanum_gazebo.launch.py  slam_gazebo.launch.py
src/control_rbkairos/urdf/: rbkairos_real_with_mesh.urdf
src/control_rbkairos/worlds/: table.world
src/robotnik_description/: .dockerignore  CHANGELOG.rst  CMakeLists.txt  CreateURDF.md  LICENSE  README.md  package.xml  robot_description.repo.yaml
src/robotnik_description/.github/: .prettierrc.json  Jenkinsfile
src/robotnik_description/img/: robot_urdf.drawio
src/robotnik_description/launch/: robot_description.launch.py
src/robotnik_description/meshes/bases/rbfiqus/: chasis.stl  left_box.stl  right_box.stl  rocker.stl
src/robotnik_description/meshes/bases/rbwatcher/: rbwatcher_chassis.dae  rbwatcher_chassis.stl  rbwatcher_top_structure.dae  rbwatcher_top_structure.stl
src/robotnik_description/robots/rb1/: rb1.urdf.xacro
src/robotnik_description/robots/rbfiqus/: rbfiqus.urdf.xacro
src/robotnik_description/robots/rbkairos/: rbkairos.urdf.xacro  rbkairos_plus.urdf.xacro
src/robotnik_description/robots/rbrobout/: rbrobout.urdf.xacro  rbrobout_plus.urdf.xacro
src/robotnik_description/robots/rbsummit/: rbsummit.urdf.xacro
src/robotnik_description/robots/rbsummit_steel/: rbsummit_steel.urdf.xacro
src/robotnik_description/robots/rbtheron/: rbtheron.urdf.xacro  rbtheron_plus.urdf.xacro
src/robotnik_description/robots/rbvogui/: rbvogui.urdf.xacro  rbvogui_plus.urdf.xacro
src/robotnik_description/robots/rbvogui_xl/: rbvogui_xl.urdf.xacro
src/robotnik_description/robots/rbwatcher/: rbwatcher.urdf.xacro
src/robotnik_description/test/: test_xacro.py
src/robotnik_description/urdf/: inertia.urdf.xacro
src/robotnik_description/urdf/arms/: ur_macro.urdf.xacro
src/robotnik_description/urdf/wheels/: wheel.gazebo.xacro
src/robotnik_sensors/: README.md
src/robotnik_sensors/robotnik_sensors/: CHANGELOG.rst
src/robotnik_sensors/robotnik_sensors/test/: test.xacro  xacro_test.py
(+100 files in other folders)
